2008-12-04  Donal K. Fellows  <dkf@users.sf.net>

	* doc/ttk_button.n, doc/ttk_checkbutton.n, doc/ttk_menubutton.n: 
	* doc/ttk_radiobutton.n: Added mention of the Toolbutton style to all
	widgets that can sensibly make use of it.

2008-12-03  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkState.c, generic/ttk/ttkTheme.h,
	* generic/ttk/ttkWidget.c, doc/ttk_widget.n:
	Add new "hover" state (patch from Pat Thoyts; needed to support proper
	visual feedback on Vista).

2008-11-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/altTheme.tcl:     Use a styled frame around the popdown
	* library/ttk/clamTheme.tcl:    listbox so we can adjust the border
	* library/ttk/classicTheme.tcl: for each theme as needed.
	* library/ttk/combobox.tcl:
	* library/ttk/defaults.tcl:
	* library/ttk/winTheme.tcl:
	* library/ttk/xpTheme.tcl:
	* tests/ttk/combobox.test:

2008-11-28  Alexandre Ferrieux 	<ferrieux@users.sourceforge.net>

	* generic/tkCanvUtil.c:	Millimeter patch. Fixes [1813597,2218964]
	* generic/tkInt.h:	by eliminating the functional redundancy
	* generic/tkObj.c:	and unnecessary loss of precision of the
	* generic/tkText.c:	{pixel,mm}ObjType tandem.

2008-11-27  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkCanvLine.c:	Replace Tcl_SetResult(interp, NULL, ....)
	* generic/tkEntry.c:	calls with Tcl_ResetResult(interp)
	* generic/tkMenu.c
	* generic/tkOldConfig.c
	* win/tkWinTest.c:	Eliminate warning: unused variable 'tkwin'

2008-11-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkBind.c:  [Bug 1389270] event generate silently ignored
	* generic/tkFocus.c: focus events. These can now be generated.
	* generic/tkGrab.c:
	* generic/tkInt.h:
	* tests/bind.test: Fixed some locale dependencies in various
	tests to reduce the noise on non-English windows systems.

2008-11-22  Donal K. Fellows  <dkf@users.sf.net>

	* library/demos/ctext.tcl: Extended to show off what you can do with