@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkIntDecls.h,v 1.39 2008/11/05 23:29:58 nijtmans Exp $
+ * RCS: @(#) $Id: tkIntDecls.h,v 1.40 2008/12/04 21:33:25 nijtmans Exp $
  */
 
 #ifndef _TKINTDECLS
@@ -21,6 +21,13 @@
 #undef TCL_STORAGE_CLASS
 #define TCL_STORAGE_CLASS DLLEXPORT
 #endif
+
+struct TkText;
+typedef struct TkTextBTree_ *TkTextBTree;
+struct TkTextDispChunk;
+struct TkTextIndex;
+struct TkTextSegment;
+struct TkSharedText;
 
 /*
  * WARNING: This file is automatically generated by the tools/genStubs.tcl
@@ -962,6 +969,77 @@ EXTERN int		TkSelGetSelection (Tcl_Interp * interp,
 				Tk_Window tkwin, Atom selection, Atom target,
 				Tk_GetSelProc * proc, ClientData clientData);
 #endif
+#ifndef TkTextGetIndex_TCL_DECLARED
+#define TkTextGetIndex_TCL_DECLARED
+/* 159 */
+EXTERN int		TkTextGetIndex (Tcl_Interp * interp,
+				struct TkText * textPtr, const char * string,
+				struct TkTextIndex * indexPtr);
+#endif
+#ifndef TkTextIndexBackBytes_TCL_DECLARED
+#define TkTextIndexBackBytes_TCL_DECLARED
+/* 160 */
+EXTERN int		TkTextIndexBackBytes (const struct TkText * textPtr,
+				const struct TkTextIndex * srcPtr, int count,
+				struct TkTextIndex * dstPtr);
+#endif
+#ifndef TkTextIndexForwBytes_TCL_DECLARED
+#define TkTextIndexForwBytes_TCL_DECLARED
+/* 161 */
+EXTERN int		TkTextIndexForwBytes (const struct TkText * textPtr,
+				const struct TkTextIndex * srcPtr, int count,
+				struct TkTextIndex * dstPtr);
+#endif
+#ifndef TkTextMakeByteIndex_TCL_DECLARED
+#define TkTextMakeByteIndex_TCL_DECLARED
+/* 162 */
+EXTERN struct TkTextIndex * TkTextMakeByteIndex (const TkTextBTree tree,
+				const struct TkText * textPtr, int lineIndex,
+				int byteIndex, struct TkTextIndex * indexPtr);
+#endif
+#ifndef TkTextPrintIndex_TCL_DECLARED
+#define TkTextPrintIndex_TCL_DECLARED
+/* 163 */
+EXTERN int		TkTextPrintIndex (const struct TkText * textPtr,
+				const struct TkTextIndex * indexPtr,
+				char * string);
+#endif
+#ifndef TkTextSetMark_TCL_DECLARED
+#define TkTextSetMark_TCL_DECLARED
+/* 164 */
+EXTERN struct TkTextSegment * TkTextSetMark (struct TkText * textPtr,
+				const char * name,
+				struct TkTextIndex * indexPtr);
+#endif
+#ifndef TkTextXviewCmd_TCL_DECLARED
+#define TkTextXviewCmd_TCL_DECLARED
+/* 165 */
+EXTERN int		TkTextXviewCmd (struct TkText * textPtr,
+				Tcl_Interp * interp, int objc,
+				Tcl_Obj *const objv[]);
+#endif
+#ifndef TkTextChanged_TCL_DECLARED
+#define TkTextChanged_TCL_DECLARED
+/* 166 */
+EXTERN void		TkTextChanged (struct TkSharedText * sharedTextPtr,
+				struct TkText * textPtr,
+				const struct TkTextIndex * index1Ptr,
+				const struct TkTextIndex * index2Ptr);
+#endif
+#ifndef TkBTreeNumLines_TCL_DECLARED
+#define TkBTreeNumLines_TCL_DECLARED
+/* 167 */
+EXTERN int		TkBTreeNumLines (TkTextBTree tree,
+				const struct TkText * textPtr);
+#endif
+#ifndef TkTextInsertDisplayProc_TCL_DECLARED
+#define TkTextInsertDisplayProc_TCL_DECLARED
+/* 168 */
+EXTERN void		TkTextInsertDisplayProc (struct TkText * textPtr,
+				struct TkTextDispChunk * chunkPtr, int x,
+				int y, int height, int baseline,
+				Display * display, Drawable dst, int screenY);
+#endif
 
 typedef struct TkIntStubs {
     int magic;
@@ -1225,6 +1303,16 @@ typedef struct TkIntStubs {
     int (*tkpTestembedCmd) (ClientData clientData, Tcl_Interp * interp, int argc, const char ** argv); /* 156 */
     int (*tkpTesttextCmd) (ClientData dummy, Tcl_Interp * interp, int argc, const char ** argv); /* 157 */
     int (*tkSelGetSelection) (Tcl_Interp * interp, Tk_Window tkwin, Atom selection, Atom target, Tk_GetSelProc * proc, ClientData clientData); /* 158 */
+    int (*tkTextGetIndex) (Tcl_Interp * interp, struct TkText * textPtr, const char * string, struct TkTextIndex * indexPtr); /* 159 */
+    int (*tkTextIndexBackBytes) (const struct TkText * textPtr, const struct TkTextIndex * srcPtr, int count, struct TkTextIndex * dstPtr); /* 160 */
+    int (*tkTextIndexForwBytes) (const struct TkText * textPtr, const struct TkTextIndex * srcPtr, int count, struct TkTextIndex * dstPtr); /* 161 */
+    struct TkTextIndex * (*tkTextMakeByteIndex) (const TkTextBTree tree, const struct TkText * textPtr, int lineIndex, int byteIndex, struct TkTextIndex * indexPtr); /* 162 */
+    int (*tkTextPrintIndex) (const struct TkText * textPtr, const struct TkTextIndex * indexPtr, char * string); /* 163 */
+    struct TkTextSegment * (*tkTextSetMark) (struct TkText * textPtr, const char * name, struct TkTextIndex * indexPtr); /* 164 */
+    int (*tkTextXviewCmd) (struct TkText * textPtr, Tcl_Interp * interp, int objc, Tcl_Obj *const objv[]); /* 165 */
+    void (*tkTextChanged) (struct TkSharedText * sharedTextPtr, struct TkText * textPtr, const struct TkTextIndex * index1Ptr, const struct TkTextIndex * index2Ptr); /* 166 */
+    int (*tkBTreeNumLines) (TkTextBTree tree, const struct TkText * textPtr); /* 167 */
+    void (*tkTextInsertDisplayProc) (struct TkText * textPtr, struct TkTextDispChunk * chunkPtr, int x, int y, int height, int baseline, Display * display, Drawable dst, int screenY); /* 168 */
 } TkIntStubs;
 
 #if defined(USE_TK_STUBS) && !defined(USE_TK_STUB_PROCS)
@@ -1897,6 +1985,46 @@ extern const TkIntStubs *tkIntStubsPtr;
 #ifndef TkSelGetSelection
 #define TkSelGetSelection \
 	(tkIntStubsPtr->tkSelGetSelection) /* 158 */
+#endif
+#ifndef TkTextGetIndex
+#define TkTextGetIndex \
+	(tkIntStubsPtr->tkTextGetIndex) /* 159 */
+#endif
+#ifndef TkTextIndexBackBytes
+#define TkTextIndexBackBytes \
+	(tkIntStubsPtr->tkTextIndexBackBytes) /* 160 */
+#endif
+#ifndef TkTextIndexForwBytes
+#define TkTextIndexForwBytes \
+	(tkIntStubsPtr->tkTextIndexForwBytes) /* 161 */
+#endif
+#ifndef TkTextMakeByteIndex
+#define TkTextMakeByteIndex \
+	(tkIntStubsPtr->tkTextMakeByteIndex) /* 162 */
+#endif
+#ifndef TkTextPrintIndex
+#define TkTextPrintIndex \
+	(tkIntStubsPtr->tkTextPrintIndex) /* 163 */
+#endif
+#ifndef TkTextSetMark
+#define TkTextSetMark \
+	(tkIntStubsPtr->tkTextSetMark) /* 164 */
+#endif
+#ifndef TkTextXviewCmd
+#define TkTextXviewCmd \
+	(tkIntStubsPtr->tkTextXviewCmd) /* 165 */
+#endif
+#ifndef TkTextChanged
+#define TkTextChanged \
+	(tkIntStubsPtr->tkTextChanged) /* 166 */
+#endif
+#ifndef TkBTreeNumLines
+#define TkBTreeNumLines \
+	(tkIntStubsPtr->tkBTreeNumLines) /* 167 */
+#endif
+#ifndef TkTextInsertDisplayProc
+#define TkTextInsertDisplayProc \
+	(tkIntStubsPtr->tkTextInsertDisplayProc) /* 168 */
 #endif
 
 #endif /* defined(USE_TK_STUBS) && !defined(USE_TK_STUB_PROCS) */
